environments/prod/stalwart/mail-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stalwart-mail
  namespace: stalwart
  externalTrafficPolicy: Cluster
  loadBalancerClass: metallb.system/k8s-cluster
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: stalwart
    app.kubernetes.io/instance: stalwart
  ports:
    - name: smtp
      port: 25
      targetPort: 25
      protocol: TCP
    - name: smtps
      port: 465
      targetPort: 465
      protocol: TCP
    - name: submission
      port: 587
      targetPort: 587
      protocol: TCP
