environments/prod/stalwart/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart
  namespace: stalwart
spec:
  parentRefs:
    - name: simons-gateway
      namespace: envoy
  hostnames:
    - "mail.simonbrundin.com"
  rules:
    - backendRefs:
        - kind: Service
          name: stalwart-stalwart
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
